--- a/pages/main.html
+++ b/pages/main.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/pages/styles/all.css">
     <link rel="stylesheet" href="/pages/styles/main.css">
+    <link rel="icon" type="image/x-icon" href="/images/fav.png">
     <title>Vinyl Shark</title>
   </head>
   <body class="d-flex flex-column">
@@ -14,7 +15,9 @@
         <div class="bg-danger">
           <div class="navbar navbar-light">
             <div class="container-md p-0 d-flex">
-              <img src="/images/logo.png" alt="logo" height="68" class="logo">
+              <div id="scene">
+                <img data-depth="0.2" src="/images/logo.png" alt="logo" height="68" class="logo">
+              </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="/images/menu.png" alt="menu" height="32px">
               </button>
@@ -56,7 +59,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner ratio ratio-16x9">
             <div class="carousel-item active">
-              <img src="/images/p1.png" class="d-block w-100 h-100" alt="...">
+              <img src="/images/p1.png" class="d-block w-100 h-100"  alt="...">
             </div>
             <div class="carousel-item">
               <img src="/images/p2.png" class="d-block w-100 h-100" alt="...">
@@ -78,7 +81,7 @@
           <div>
             <h2 class="text-center my-3 fs-2 fw-bold">About Records</h2>
             <div class="row mx-1">
-              <img src="/images/main1.png" alt="plastinka" class="col-xl-4 col-12 pic">
+              <img src="/images/vinylGIF.gif" data-depth="0.2" alt="plastinka" class="col-xl-4 col-12 pic" >
               <p class="col-xl-8 text-justify fs-5 col-12">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquam nunc et porta euismod. Fusce in lacus risus. Vestibulum scelerisque tellus nisl, condimentum lacinia urna placerat vel. Phasellus vel nunc at magna placerat aliquam non sit amet sapien. Proin non consequat nisi. Proin sed enim non augue ornare ornare. Mauris varius arcu eget dui fringilla sodales. Vivamus arcu mauris, tincidunt fringilla iaculis non, auctor et dui. Proin et mi et mauris vulputate finibus. Quisque volutpat nulla id neque tincidunt finibus in vitae ante. Ut pulvinar pellentesque fermentum. Quisque condimentum interdum urna, eget interdum lacus faucibus hendrerit. Nullam tempor malesuada leo a consectetur. Integer neque purus, varius accumsan facilisis ac, eleifend dignissim odio.Nunc pellentesque dolor a placerat auctor. Duis laoreet quis dui nec eleifend. Quisque convallis augue a urna sagittis facilisis.
               </p>
@@ -96,9 +99,48 @@
         </div>
       </div>
     </main>
+    <div class="chatWrapper position-fixed">
+      <button class="btnChat border-0 rounded-top d-flex fs-4 justify-content-center align-items-center text-white fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#chat" aria-controls="chat" aria-expanded="false" aria-label="Toggle chat" onclick="openChat()">
+        Chat
+      </button>
+      <div class="collapse" id="chat">
+        <div class="chat bg-white d-flex flex-column">
+          <div class="messages d-flex flex-column" id="messages">
+            <div class="counterSide msg">Write to this chat if you have questions</div>
+          </div>
+          <div class="border-top border-3 actions">
+            <div class="d-flex align-items-center">
+              <input type="text" class="chatInput fw-bold align-self-end border-0" placeholder="Type your message" id="msgInp">
+              <button class="btnSend border-0 rounded-circle d-flex justify-content-center align-items-center" onclick="sendMsg()">
+                <svg class="justify-self-end" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-send-fill" viewBox="0 0 16 16" style="color: white;">
+                  <path fill-rule="evenodd" d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89.471-1.178-1.178.471L5.93 9.363l.338.215a.5.5 0 0 1 .154.154l.215.338 7.494-7.494Z"/>
+                </svg>
+              </button>
+            </div>
+            <ul class="fastQsts d-flex flex-wrap">
+              <li class="fw-bold text-white" onclick="fastQst(this.innerHTML)">Hello</li>
+              <li class="fw-bold text-white" onclick="fastQst(this.innerHTML)">How to buy a record?</li>
+              <li class="fw-bold text-white" onclick="fastQst(this.innerHTML)">Bye</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="bg-danger d-flex align-items-center justify-content-center fs-3 text-white">
       <span>© 2021 | All rights reserved</span>
     </footer>
+    <button class="opacity-50 bg-danger rounded-circle position-fixed btnTop text-white justify-content-center align-items-center" onclick="topFunction()" id="btnTop">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-caret-up-fill" viewBox="0 0 16 16">
+        <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
+      </svg>
+    </button>
+    <script src="/scripts/chat.js"></script>
+    <script src="/scripts/btnTop.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script>
+      var scene = document.getElementById('scene');
+      var parallaxInstance = new Parallax(scene);
+    </script>
   </body>
 </html>
