add tooltips for catalog and timer

--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -108,6 +108,11 @@
     <footer class="bg-danger d-flex align-items-center justify-content-center fs-3 text-white">
       <span>© 2021 | All rights reserved</span>
     </footer>
+    <div id="tooltip" class="position-fixed color-white text-white fs-4 fw-bold rounded-pill d-flex justify-content-center align-items-center" style="z-index: 10000; left: -300px; bottom: 150px; width: 300px; background-color: #19c13a; height: 50px; transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;">
+      <span>
+        Product added to cart
+      </span>
+    </div>
     <button class="opacity-50 bg-danger rounded-circle position-fixed btnTop text-white justify-content-center align-items-center" onclick="topFunction()" id="btnTop">
       <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-caret-up-fill" viewBox="0 0 16 16">
         <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
