--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -27,8 +27,9 @@
                   <span class="text-white fw-bold mx-2">99-99-99</span>
                 </div>
                 <div class="cart-icon">
-                  <a href="/pages/cart.html">
+                  <a href="/pages/cart.html" class="position-relative">
                     <img src="/images/cart.png" alt="cart" height="42px">
+                    <span id="cartCount" class="position-absolute bg-white rounded-circle d-flex justify-content-center align-items-center" style="height: 20px; width: 20px; right: -10px; top: -20px"></span>
                   </a>
                 </div>
               </div>
@@ -118,6 +119,7 @@
         <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
       </svg>
     </button>
+    <script src="/scripts/cartCount.js"></script>
     <script src="/scripts/btnTop.js"></script>
     <script src="/scripts/chat.js"></script>
     <script src="/scripts/script.js"></script>
